fix: dev now working, fixed conflicts
